--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,21 @@
 AllCops:
-  TargetRubyVersion: 2.6.1
+  TargetRubyVersion: 2.6.6
+  Exclude:
+    - _misc/**/*
+    - bin/**/*
 
 Layout/LineLength:
   Enabled: true
   Max: 120
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
 
 Metrics/AbcSize:
   Max: 20
@@ -17,3 +29,15 @@ Metrics/MethodLength:
 
 Metrics/ModuleLength:
   Max: 150
+
+Style/ExponentialNotation:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
